fix alignment of cycles bar

--- a/style.css
+++ b/style.css
@@ -127,8 +127,8 @@ section[role='tabpanel'] {
 }
 
 .cycles-bar {
-  margin-left: 15pt;
-  margin-right: 15pt;
+  margin-left: 15.74pt;
+  margin-right: 15.74pt;
 }
 
 .cycles-label {
